--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Responsive Landing Page</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <nav class="navbar">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
+
+  <!-- Navigation Bar -->
+  <nav id="navbar">
+    <div class="logo">MyBrand</div>
+    <ul class="menu">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#products">Products</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
-  <section class="hero">
-    <h1>Welcome to My Landing Page</h1>
+  <!-- Hero / Home Section -->
+  <header id="home" class="hero">
+    <h1>Welcome to My Responsive Landing Page</h1>
+    <p>Scroll down to see the navbar style change</p>
+  </header>
+
+  <!-- Products Section -->
+  <section id="products" class="content">
+    <h2>Our Products</h2>
+    <p>Explore our phone collections like iPhone, Samsung, Vivo, and more.</p>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="content">
+    <h2>About Us</h2>
+    <p>We are a phone selling brand with top-quality products and service.</p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="content">
+    <h2>Contact Us</h2>
+    <p>Email: support@example.com</p>
+    <p>Phone: +91 98765 43210</p>
   </section>
 
   <script src="script.js"></script>
